--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <main>
 <div class="top">
-	 <img class="huji_img" src="img/background_1.jpg">
+	 <img class="img/huji_img" src="img/background_1.jpg">
 	 <img class="cupple_img" src="img/cupple.jpg">
 	 <img class="title_img" src="img/title.jpg">
 </div>
